# psim_workflow

./: .env.example  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 5c9fa6eb7598_workflow_engine.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: health.py  instances.py  workflows.py
app/core/: auth.py  config.py  database.py  logging.py  permissions.py
app/models/: base.py  instance.py  state_machine.py  workflow.py
app/schemas/: auth.py  common.py  instance.py  workflow.py
app/services/: instance_service.py  workflow_service.py
app/state_machine/: engine.py
docker/: Dockerfile  docker-compose.yml
examples/: create_sample_instance.json  sample_workflow_complex.json  sample_workflow_simple.json  send_approval_event.json  usage.txt
requirements/: base.txt  dev.txt
scripts/: init-db.sh  start-dev.sh  start-prod.sh
